tests/lean/autoBoundPostponeLoop.lean.expected.out
autoBoundPostponeLoop.lean:5:12-5:18: error: invalid `▸` notation, argument
  h
has type
  ?m
equality expected
